// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Price component as expected 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  MX$0.00
</Text>
`;

exports[`renders Price component as expected 2`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  MX$10.46
</Text>
`;

exports[`renders Price component as expected 3`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  MX$1,000,000.00
</Text>
`;
